2008-09-26  Gabor Csardi  <csardi@szaffi>

	* interfaces/R/igraph/R/CohesiveBlocks.R (cohesive.blocks) : 
	add 'cutsetAlgorithm' argument

	* interfaces/R/igraph/R/flow.R (igraph.mincut) : report error 
	if (unimplemented) s-t minimum cut is requested

2008-08-22  Gabor Csardi  <csardi@szaffi>

	* interfaces/R/igraph/R/decomposition.R (is.chordal) : added
	* interfaces/R/src/rinterface.c.in (R_igraph_is_chordal) : added

2008-08-20  Gabor Csardi  <csardi@szaffi>

	* interfaces/R/igraph/R/conversion.R (get.adjacency.sparse) : 
	fixed a bug, when graph.adjacency.sparse is called with 
	a named graph

2008-07-21  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (plot.igraph) : corrected a bug 
	when using multiple vertex shapes

2008-07-17  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R (betweenness)
	* interfaces/R/src/rinterface.c.in (R_igraph_betweenness) : 
	add support for weights

2008-07-14  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R (betweenness) : added 
	progress bar support
	* interfaces/R/src/rinterface.c.in (R_igraph_betweenness) : added
	progress bar support

2008-06-24  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structure.generators.R (graph.adjacency) :
	'sparse' option added

	* interfaces/R/igraph/R/structure.generators.R (graph.adjacency) :
	several bugs corrected
	
2008-06-21  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/conversion.R (get.adjacency) : 'sparse' 
	argument added

2008-06-20  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/conversion.R (igraph.from.graphNEL)
	(igraph.to.graphNEL) : add support for attributes

2008-06-15  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structure.generators.R (graph.data.frame) :
	bug corrected

2008-06-02  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/src/rinterface.c.in (R_igraph_shortest_path) :