@@ -1,3 +1,9 @@
+2008-09-29  Gabor Csardi  <csardi@szaffi>
+
+	* interfaces/R/igraph/R/structural.properties.R (graph.laplacian)
+	* interfaces/R/src/rinterface.c.in (R_igraph_laplacian) : 
+	removed, these are generated by Stimulus now
+
 2008-09-26  Gabor Csardi  <csardi@szaffi>
 
 	* interfaces/R/igraph/R/CohesiveBlocks.R (cohesive.blocks) : 
